[gd_scene format=3 uid="uid://cir6r66f5ktrs"]

[ext_resource type="Script" uid="uid://b7b4k4iymiceg" path="res://Scenes/room/room.gd" id="1_e02cn"]
[ext_resource type="PackedScene" uid="uid://bmjwyhfidksl2" path="res://Scenes/UI/gameUI.tscn" id="1_oksfc"]
[ext_resource type="Script" uid="uid://cyq2qlkyco7r2" path="res://Scenes/room/roomParallax.gd" id="2_pcytu"]
[ext_resource type="PackedScene" uid="uid://csw0p6dc1t33x" path="res://Scenes/junctions/junction.tscn" id="4_38kns"]

[node name="RoomTemplate" type="Node2D" unique_id=1718267346]
script = ExtResource("1_e02cn")

[node name="GameUi" parent="." unique_id=1653777319 instance=ExtResource("1_oksfc")]
top_level = true

[node name="Parallax2D" type="Parallax2D" parent="." unique_id=1725487271]
script = ExtResource("2_pcytu")
sensitivity = 5
startPos = Vector2(500, 800)

[node name="background" type="Node2D" parent="Parallax2D" unique_id=2135513620]

[node name="bg_a" type="Sprite2D" parent="Parallax2D/background" unique_id=2080803100]
position = Vector2(960, 540)
scale = Vector2(1.3, 1.3)

[node name="bg_b" type="Sprite2D" parent="Parallax2D/background" unique_id=519933799]
position = Vector2(960, 540)
scale = Vector2(1.3, 1.3)

[node name="junctions" type="Control" parent="." unique_id=1473116463]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="north" parent="junctions" unique_id=1843138461 instance=ExtResource("4_38kns")]
layout_mode = 0
offset_left = 892.0
offset_top = -3.0
offset_right = 932.0
offset_bottom = 37.0

[node name="Label" parent="junctions/north" index="1" unique_id=2003407715]
text = "admin"

[node name="south" parent="junctions" unique_id=1207820673 instance=ExtResource("4_38kns")]
layout_mode = 0
offset_left = 905.0
offset_top = 734.0
offset_right = 945.0
offset_bottom = 774.0

[node name="TextureButton" parent="junctions/south" index="0" unique_id=627524166]
rotation = 3.1415927

[node name="Label" parent="junctions/south" index="1" unique_id=2003407715]
text = "cafeteria"

[node name="east" parent="junctions" unique_id=1985022658 instance=ExtResource("4_38kns")]
layout_mode = 0
offset_left = 1663.0
offset_top = 389.0
offset_right = 1703.0
offset_bottom = 429.0

[node name="TextureButton" parent="junctions/east" index="0" unique_id=627524166]
rotation = 1.5707964

[node name="Label" parent="junctions/east" index="1" unique_id=2003407715]
text = "hallway"

[node name="west" parent="junctions" unique_id=249817274 instance=ExtResource("4_38kns")]
layout_mode = 0
offset_left = 26.0
offset_top = 379.0
offset_right = 66.0
offset_bottom = 419.0

[node name="TextureButton" parent="junctions/west" index="0" unique_id=627524166]
rotation = -1.5707964

[node name="Label" parent="junctions/west" index="1" unique_id=2003407715]
text = "lab"

[node name="northeast" parent="junctions" unique_id=1807764123 instance=ExtResource("4_38kns")]
layout_mode = 0
offset_left = 1670.0
offset_top = 8.0
offset_right = 1710.0
offset_bottom = 48.0

[node name="TextureButton" parent="junctions/northeast" index="0" unique_id=627524166]
rotation = 0.7853982

[node name="Label" parent="junctions/northeast" index="1" unique_id=2003407715]
text = "morgue"

[node name="northwest" parent="junctions" unique_id=1673420330 instance=ExtResource("4_38kns")]
layout_mode = 0
offset_left = 30.0
offset_top = 23.0
offset_right = 70.0
offset_bottom = 63.0

[node name="TextureButton" parent="junctions/northwest" index="0" unique_id=627524166]
rotation = -0.7853982

[node name="Label" parent="junctions/northwest" index="1" unique_id=2003407715]
text = "patient1"

[node name="southeast" parent="junctions" unique_id=252371256 instance=ExtResource("4_38kns")]
layout_mode = 0
offset_left = 1673.0
offset_top = 742.0
offset_right = 1713.0
offset_bottom = 782.0

[node name="TextureButton" parent="junctions/southeast" index="0" unique_id=627524166]
rotation = 2.3561945

[node name="Label" parent="junctions/southeast" index="1" unique_id=2003407715]
text = "patient2"

[node name="southwest" parent="junctions" unique_id=513282505 instance=ExtResource("4_38kns")]
layout_mode = 0
offset_left = 32.0
offset_top = 742.0
offset_right = 72.0
offset_bottom = 782.0

[node name="TextureButton" parent="junctions/southwest" index="0" unique_id=627524166]
rotation = -2.3561945

[node name="Label" parent="junctions/southwest" index="1" unique_id=2003407715]
text = "reception"

[connection signal="pressed" from="junctions/north/TextureButton" to="." method="_on_north_texture_button_pressed"]
[connection signal="pressed" from="junctions/south/TextureButton" to="." method="_on_south_texture_button_pressed"]
[connection signal="pressed" from="junctions/east/TextureButton" to="." method="_on_east_texture_button_pressed"]
[connection signal="pressed" from="junctions/west/TextureButton" to="." method="_on_west_texture_button_pressed"]
[connection signal="pressed" from="junctions/northeast/TextureButton" to="." method="_on_northeast_texture_button_pressed"]
[connection signal="pressed" from="junctions/northwest/TextureButton" to="." method="_on_northwest_texture_button_pressed"]
[connection signal="pressed" from="junctions/southeast/TextureButton" to="." method="_on_southeast_texture_button_pressed"]
[connection signal="pressed" from="junctions/southwest/TextureButton" to="." method="_on_southwest_texture_button_pressed"]

[editable path="junctions/north"]
[editable path="junctions/south"]
[editable path="junctions/east"]
[editable path="junctions/west"]
[editable path="junctions/northeast"]
[editable path="junctions/northwest"]
[editable path="junctions/southeast"]
[editable path="junctions/southwest"]
